--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "chaterpater": "file:..",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
