--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=9000
 MONGODB_URI=mongodb+srv://sushantskb:tnahsus@cluster1.nszhzyf.mongodb.net/Chatter-Patter
 secretKey=chatter-patter
+NODE_ENV=development
