--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "chaterpater": "file:..",
+    "client": "file:",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
